--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,40 @@
 @charset "UTF-8";
 
 // vendor bullshit
-@import "../bower_components/compass-mixins/lib/compass";
-@import "../bower_components/modular-scale/stylesheets/modular-scale";
-@import "../bower_components/breakpoint-sass/stylesheets/breakpoint";
-@import "../bower_components/singularitygs/stylesheets/singularitygs";
+@import "compass-mixins/lib/compass";
+@import "modularscale-sass/stylesheets/modular-scale";
+@import "breakpoint-sass/stylesheets/breakpoint";
 
 // Settings, variables
 @import "settings-colors";
 @import "settings";
-@import "scales";
 
-@import "../bower_components/primer-css/scss/tooltips";
+// more vendor bullshit
+@import "scales-utilities-normalize/normalize";
+@import "scales-utilities-reset/reset";
+@import "scales-utilities-clearfix/clearfix";
+
+@import "scales-base-typography/typography";
+@import "scales-base-images/images";
+@import "scales-base-lists/lists";
+// @import "scales-base-blockquotes/blockquotes";
+@import "scales-base-forms/forms";
+@import "scales-base-tables/tables";
+
+@import "scales-patterns-box/box";
+// @import "scales-patterns-horizontal-list/horizontal-list";
+@import "scales-patterns-vertical-list/vertical-list";
+// @import "scales-patterns-media-object/media-object";
+@import "scales-patterns-flag/flag";
+@import "scales-patterns-buttons/buttons";
+@import "scales-patterns-split/split";
+// @import "scales-patterns-stats/stats";
+// @import "scales-patterns-multi-col-list/multi-col-list";
+
+@import "scales-overrides-size/size";
+@import "scales-overrides-spacing/spacing";
+
+@import "primer-css/scss/tooltips";
 
 // Utilities
 @import "utilities/functions";
