--- a/sass/app/_cards.scss
+++ b/sass/app/_cards.scss
@@ -1,49 +1,44 @@
-[class*="cards"] {
-    @extend %clearfix;
+.cards, .cards--dual {
+    @include leader();
+    @include trailer();
+
+    @include breakpoint($bp-medium) {
+        display: flex;
+        flex-wrap: wrap;
+
+        > li {
+            flex: 0 0 auto;
+            width: 47%;
+
+            &:nth-child(2n+2) {
+                margin-left: 35px;
+            }
+        }
+    }
 }
 
-.cards, .cards--dual {
-    @include leader;
-    @include trailer;
+.cards {
+    @include breakpoint($bp-large) {
+        > li {
+            width: 31%;
+
+            // reset style from medium breakpoint
+            &:nth-child(2n+2) {
+                margin-left: 0;
+            }
+
+            &:nth-child(3n+2),
+            &:nth-child(3n+3) {
+                margin-left: 30px;
+            }
+        }
+    }
 }
 
 .cards--baby > li {
     width: 100%;
     @include adjust-font-size-to(ms(-1));
     @include trailer(2);
-}
-
-.cards > li,
-.cards--dual > li {
-    @include breakpoint($bp-medium) {
-        &:nth-child(odd) {
-            @include grid-span(1, 1, $grid: 2, $gutter: .1);
-            clear: left;
-        }
-
-        &:nth-child(even) {
-            @include grid-span(1, 2, $grid: 2, $gutter: .1);
-            clear: right;
-        }
-    }
-}
-
-.cards > li {
-    @include breakpoint($bp-large) {
-        &:nth-child(3n+1) {
-            @include grid-span(1, 1, $grid: 3, $gutter: .1);
-            clear: left;
-        }
-
-        &:nth-child(3n+2) {
-            @include grid-span(1, 2, $grid: 3, $gutter: .1);
-        }
-
-        &:nth-child(3n+3) {
-            @include grid-span(1, 3, $grid: 3, $gutter: .1);
-            clear: right;
-        }
-    }
 }
 
 .card, .card--baby {
