Add neato checkbox and clean up build tabs

--- a/sass/_settings-colors.scss
+++ b/sass/_settings-colors.scss
@@ -1,8 +1,11 @@
 // Color variables
 $text-color: #070103;
+
+$white: #ffffff;
+
 $grey: #888;
 $light-grey: #e5e5e5;
-$white: #ffffff;
+$lightest-grey: #d4d4d4;
 
 $bright-blue: #4cb1dd;
 $slightly-less-bright-blue : #357793;
