--- a/sass/style.scss
+++ b/sass/style.scss
@@ -73,6 +73,7 @@
 // Components
 @import "patterns/alert-bar";
 @import "patterns/buttons";
+@import "patterns/check-box";
 @import "patterns/list";
 @import "patterns/nav";
 @import "patterns/pagination";
