--- a/sass/patterns/_check-box.scss
+++ b/sass/patterns/_check-box.scss
@@ -5,6 +5,9 @@
     text-align: left;
     user-select: none;
 
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
     .neatbox__check {
         height: 1.5em;
         width: 1.5em;
