add hover state to neatbox

--- a/sass/base/_tables.scss
+++ b/sass/base/_tables.scss
@@ -101,6 +101,7 @@ th.table-mid-header {
     .icon--link {
         position: absolute;
         right: 5px;
+        top: 0px;
     }
 
     .tablesaw-cell-label {
