--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -6,9 +6,13 @@
 
 {% block content %}
 
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('application.status', {'application': push.application.id}) }}">Back to Application Status</a></p>
+    <div class="nav--page">
+        <h1>Push - <strong>{{ push.application.name }}</strong></h1>
 
-    <h1>Push - <strong>{{ push.application.name }}</strong></h1>
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ urlFor('application.status', {'application': push.application.id}) }}">Back to Application Status</a>
+        </p>
+    </div>
 
     <h2>Push Details</h2>
 
