--- a/templates/base.kraken.twig
+++ b/templates/base.kraken.twig
@@ -1,5 +1,4 @@
 {% extends 'base.html.twig' %}
-{% import '_partial/layout.header.twig' as nav_macros %}
 
 {% block page_title %}
     <title>
@@ -13,36 +12,36 @@
             <div class="hal">
                 <a href="{{ urlFor('kraken') }}" class="wrapper">
 
+                    <div class="kraken-logo circular"></div>
+
                     <h1 class="kraken-label">
                         <span>KRAKEN</span>
                     </h1>
-
-                    <div class="kraken-logo circular"></div>
                 </a>
             </div>
         {% endblock %}
 
         {% block navigation %}
             <nav role="navigation">
-                <ul class="nav--main mbn">
-                    {% if currentUser %}
-
-                        <li>{{ nav_macros.navlink('HAL 9000', 'dashboard', 'spinner-3') }}</li>
-                        <li>{{ nav_macros.navlink('Applications', 'kraken.applications', 'list') }}</li>
-                        <li>{{ nav_macros.navlink('Environments', 'kraken.environments', 'leaf') }}</li>
+                {% if currentUser %}
+                    <ul class="nav--main">
+                        <li><a href="{{ urlFor('kraken.applications') }}">{{ macros.icon('list') }} Applications</a></li>
+                        <li><a href="{{ urlFor('kraken.environments') }}">{{ macros.icon('leaf') }} Environments</a></li>
 
                         {% if isUserAdminOrSuper(currentUser) %}
-                            <li>{{ nav_macros.navlink('Audit Logs', 'kraken.admin.audit.logs.page1', 'watch') }}</li>
+                            <li><a href="{{ urlFor('kraken.admin.audit.logs.page1') }}">{{ macros.icon('watch') }} Audit Logs</a></li>
                         {% endif %}
 
-                        <li>{{ nav_macros.navlink('Help', 'kraken.help', 'question') }}</li>
-                        <li>{{ nav_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
-
-                    {% else %}
-                        <li class="signed-out">{{ nav_macros.navlink('Help', 'kraken.help', 'question') }}</li>
-                        <li class="signed-out">{{ nav_macros.navlink('Login', 'login', 'sign-in') }}</li>
-                    {% endif %}
-                </ul>
+                        <li><a href="{{ urlFor('dashboard') }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
+                        <li><a href="{{ urlFor('kraken.help') }}">{{ macros.icon('question') }} Help</a></li>
+                        <li><a href="{{ urlFor('logout') }}">{{ macros.icon('sign-out') }} Sign out</a></li>
+                    </ul>
+                {% else %}
+                    <ul class="nav--main-signed-out">
+                        <li><a href="{{ urlFor('kraken.help') }}">{{ macros.icon('question') }} Help</a></li>
+                        <li><a href="{{ urlFor('login') }}">{{ macros.icon('sign-in') }} Sign in</a></li>
+                    </ul>
+                {% endif %}
             </nav>
         {% endblock %}
     {% endembed %}
