--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -23,24 +23,25 @@
 
         <header role="banner">
             <div class="hal">
-                <a href="/" class="wrapper">
+                <div class="wrapper">
+                    <a href="/">
+                        <div class="hal-eye circular">
+                            <div class="ring circular"></div>
+                            <div class="oculus circular">
+                                <div class="iris circular narrow"></div>
+                                <div class="iris circular wide"></div>
+                                <div class="highlight alpha"></div>
+                                <div class="highlight"></div>
+                                <div class="highlight beta"></div>
+                            </div>
+                        </div>
+                    </a>
 
                     <h1 class="hal-label">
                         <span class="hal-label__name">HAL</span>
                         <span class="hal-label__version">9000</span>
                     </h1>
-
-                    <div class="hal-eye circular">
-                        <div class="ring circular"></div>
-                        <div class="oculus circular">
-                            <div class="iris circular narrow"></div>
-                            <div class="iris circular wide"></div>
-                            <div class="highlight alpha"></div>
-                            <div class="highlight"></div>
-                            <div class="highlight beta"></div>
-                        </div>
-                    </div>
-                </a>
+                </div>
             </div>
         </header>
 
