--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -5,12 +5,16 @@
 
 {% block content %}
 
-    <h1 class="mbn">User Settings</h1>
+    <div class="nav--page">
+        <h1>User Settings</h1>
 
-    <a href="{{ urlFor('user', {user: user.id}) }}">User Profile</a>
+        <p class="nav--page__back">
+            <a class="btn btn--small btn--back" href="{{ urlFor('user', {user: user.id}) }}">User Profile</a>
+        </p>
+    </div>
 
     <section class="leader--andre">
-        <h2 class="mbn">HAL Preferences</h2>
+        <h2 class="mbs">HAL Preferences</h2>
         {{ block('navigation_pref') }}
     </section>
 
@@ -26,24 +30,7 @@
 {% endblock %}
 
 {% block navigation_pref %}
-    <small>Customize the items on the navigation menu</small>
-
     <form method="post">
-
-        <ul class="nav--main nav--preferences">
-            {% for item, description in navItems %}
-                <li>
-                    <label>
-                        <input type="checkbox" name="navpreferences[]" value="{{ item }}" {{ isNavOn(item) ? ' checked' : '' }}>
-
-                        {{ macros.icon('tick', 'pref-on') }}
-                        {{ macros.icon('cross', 'pref-off') }}
-
-                        {{ description }}
-                    </label>
-                </li>
-            {% endfor %}
-        </ul>
 
         <div class="checkbox--pretty">
             <label>
