--- a/templates/admin/credentials/credential.twig
+++ b/templates/admin/credentials/credential.twig
@@ -62,7 +62,7 @@
                         {{ deployment.server.environment.name }}
                     </td>
                     <td>
-                        {{ deployment|formatDeploymentServer(true) }}
+                        {{ deployment.formatPretty(true) }}
                     </td>
                     <td class="tr">
                         <a class="btn btn--tiny" href="{{ urlFor('deployment', {application: deployment.application.id, deployment: deployment.id}) }}">View</a>
