--- a/templates/server/servers.twig
+++ b/templates/server/servers.twig
@@ -22,7 +22,7 @@
                             <td>
                                 <ul class="col-list">
                                     {% for server in servers %}
-                                        <li><a href="{{ urlFor('server', {'server': server.id}) }}">{{ server|formatServer }}</a></li>
+                                        <li><a href="{{ urlFor('server', {'server': server.id}) }}">{{ server.formatPretty }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </td>
