--- a/templates/_partial-job/push-table.twig
+++ b/templates/_partial-job/push-table.twig
@@ -20,7 +20,7 @@
             </td>
             <td>
                 {% if push.deployment %}
-                    {{ push.deployment.server.environment.name }} → {{ push.deployment|formatDeploymentServer(true) }}
+                    {{ push.deployment.server.environment.name }} → {{ push.deployment.formatPretty(true) }}
                 {% else %}
                     Unknown
                 {% endif %}
