--- a/templates/application/deployment/deployments.edit.twig
+++ b/templates/application/deployment/deployments.edit.twig
@@ -14,7 +14,7 @@
             </dd>
 
             <dt class="split__title">Server</dt>
-            <dd><a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ deployment.server|formatServer }}</a></dd>
+            <dd><a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ deployment.server.formatPretty }}</a></dd>
 
             <dt class="split__title">Environment</dt>
             <dd>
@@ -24,7 +24,7 @@
     </div>
 
     <h4>Type</h4>
-    <p>{{ deployment.server|formatServerType }}</p>
+    <p>{{ deployment.server.formatHumanType }}</p>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
