--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -27,7 +27,7 @@
             <dt class="split__title">Server</dt>
             <dd>
                 {% if push.deployment %}
-                    <a href="{{ urlFor('server', {'server': push.deployment.server.id}) }}">{{ push.deployment|formatDeploymentServer }}</a>
+                    <a href="{{ urlFor('server', {'server': push.deployment.server.id}) }}">{{ push.deployment.formatPretty }}</a>
                 {% else %}
                     Unknown
                 {% endif %}
@@ -37,7 +37,7 @@
                 {{ push.deployment|formatDeploymentDetailsLabel }}
             </dt>
             <dd>
-                <code>{{ push.deployment|formatDeploymentDetails }}</code>
+                <code>{{ push.deployment.formatMeta }}</code>
             </dd>
 
             {% if push.deployment and push.deployment.url %}
