--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -20,7 +20,7 @@
 
                 <h1 class="hal-label">
                     <span class="hal-label__name">HAL</span>
-                    <span class="hal-label__version">9000 {% if tick.isUpdateTickOn %}
+                    <span class="hal-label__version">9000 {% if isUpdateTickOn() %}
                         <a class="hal-stamp" href="{{ urlFor('latest.release') }}" title="HAL 9000 was recently updated!">{{ macros.icon('star') }}</a>
                     {% endif %}</span>
                 </h1>
