--- a/templates/_partial/layout.messages.twig
+++ b/templates/_partial/layout.messages.twig
@@ -2,8 +2,8 @@
 {% import "_partial/macros.twig" as macros %}
 
 {% block flash %}
-    {% if session.flash(true) %}
-        {% for message in session.flash(false) %}
+    {% if session_flash(true) %}
+        {% for message in session_flash(false) %}
             {{ macros.alert(message.type, message, message.details) }}
         {% endfor %}
     {% endif %}
