--- a/templates/admin/global.message.twig
+++ b/templates/admin/global.message.twig
@@ -25,7 +25,7 @@
             <p>No message currently set.</p>
         {% endif %}
 
-        {% if tick.isUpdateTickOn %}
+        {% if isUpdateTickOn() %}
             <p>Update Tick is enabled.</p>
         {% endif %}
     </div>
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                     <label for="update-tick">
-                        <input type="checkbox" id="update-tick" name="update-tick" value="1" {{ tick.isUpdateTickOn ? ' checked' : ''}}>
+                        <input type="checkbox" id="update-tick" name="update-tick" value="1" {{ isUpdateTickOn() ? ' checked' : ''}}>
                         Enable Update Tick on header
                     </label>
                     <small class="additional">This tick creates an icon on the header that links to the "Latest Release" page.</small>
