--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -18,7 +18,7 @@
         </h1>
     {% endif %}
 
-    {% if isFirstLogin or not favorites %}
+    {% if session_get('is-first-login') or not favorites %}
        {{ block('intro') }}
     {% endif %}
 
